nav done, header on going

--- a/index.html
+++ b/index.html
@@ -3,7 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>TravelINDO</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav class="navbar">
+        <div class="container nav-wrapper">
+          <a href="#" class="logo"
+            >Travel<span class="red">IN</span><span class="white">DO</span></a
+          >
+          <div class="menu-wrapper">
+            <ul class="menu">
+              <li class="menu-item">
+                <a href="#" class="menu-link active">Home</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Services</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Pricing</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">About us</a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-link">Contact</a>
+              </li>
+            </ul>
+            <a href="#" class="btn-member">Member area</a>
+          </div>
+          <div class="menu-toggle bx bxs-grid-alt"></div>
+        </div>
+      </nav>
+
+      <section class="home" id="home">
+        <div class="container home-wrapper">
+          <div class="content-left">
+            <h1 class="heading">
+              Make Your Trip Memorable Book With
+              <span class="purple">Travel</span><span class="red">IN</span
+              ><span class="white">DO</span>
+            </h1>
+            <p class="subheading">
+              We have partners with several destinations that you might feel at
+              home there, we will guide you with our best servive.
+            </p>
+            <div class="box-wrapper">
+              <div class="box">
+                <i class="bx bxs-check-square"></i>
+                <p>Plan your trip</p>
+              </div>
+              <div class="box">
+                <i class="bx bxs-check-square"></i>
+                <p>Fly with us</p>
+              </div>
+            </div>
+          </div>
+          <div class="content-right"></div>
+        </div>
+      </section>
+    </header>
+    <script src="js/main.js"></script>
+  </body>
 </html>
