--- a/index.html
+++ b/index.html
@@ -63,8 +63,45 @@
                 <p>Fly with us</p>
               </div>
             </div>
+            <div class="form-panel">
+              <!-- <img src="" alt=""> -->
+              <div class="form-title">
+                <p>Get the schedule</p>
+              </div>
+              <div class="form-location">
+                <i class="bx bxs-map loc"></i>
+                <div class="location">
+                  <p>Location<i class="bx bx-chevron-down"></i></p>
+                  <select>
+                    <option value="">Jakarta, Indonesia</option>
+                    <option value="">Bali, Indonesia</option>
+                    <option value="">Yogyakarta, Indonesia</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-date">
+                <i class="bx bxs-calendar-alt cal"></i>
+                <div class="date">
+                  <p>Date<i class="bx bx-chevron-down"></i></p>
+                  <input type="date" />
+                </div>
+              </div>
+              <div class="btn-search">
+                <i class="bx bx-search"></i>
+              </div>
+            </div>
+            <p class="suggestion">
+              Popular search: Kuta beach, Raja Ampat beach, Borobudur temple
+            </p>
           </div>
-          <div class="content-right"></div>
+          <div class="content-right">
+            <div class="img-wrapper">
+              <img
+                src="assets/hero-travel-2.jpg"
+                alt="A traveller in Raja Ampat beach."
+              />
+            </div>
+          </div>
         </div>
       </section>
     </header>
