--- a/index.html
+++ b/index.html
@@ -105,6 +105,66 @@
         </div>
       </section>
     </header>
+
+    <!-- Service Start -->
+    <section class="service">
+      <div class="container service-wrapper">
+        <div class="row1">
+          <p class="label-service">What we serve</p>
+          <h1 class="heading-service">Top Values for You</h1>
+          <p class="subheading-service">
+            The best service that will be with you every time
+          </p>
+        </div>
+        <div class="row2">
+          <div class="box-service">
+            <i class="bx bx-globe"></i>
+            <h3>Lot of Choices</h3>
+            <p>
+              Total of more than 450 destinations in various countries in the
+              world become partner with us
+            </p>
+            <div class="btn-learn">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+          <div class="box-service">
+            <i class="bx bx-globe"></i>
+            <h3>Lot of Choices</h3>
+            <p>
+              Total of more than 450 destinations in various countries in the
+              world become partner with us
+            </p>
+            <div class="btn-learn">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+          <div class="box-service">
+            <i class="bx bx-globe"></i>
+            <h3>Lot of Choices</h3>
+            <p>
+              Total of more than 450 destinations in various countries in the
+              world become partner with us
+            </p>
+            <div class="btn-learn">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+          <div class="box-service">
+            <i class="bx bx-globe"></i>
+            <h3>Lot of Choices</h3>
+            <p>
+              Total of more than 450 destinations in various countries in the
+              world become partner with us
+            </p>
+            <div class="btn-learn">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Service End -->
     <script src="js/main.js"></script>
   </body>
 </html>
