--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="content-right">
             <div class="img-wrapper">
               <img
-                src="assets/hero-travel-2.jpg"
+                src="assets/hero-travel-3.jpg"
                 alt="A traveller in Raja Ampat beach."
               />
             </div>
@@ -165,6 +165,50 @@
       </div>
     </section>
     <!-- Service End -->
+    <!-- Destination Start -->
+    <section class="product">
+      <div class="container product-wrapper">
+        <div class="row1">
+          <div class="title-product">
+            <p class="label-product">TOP DESTINATION</p>
+            <h1 class="heading-product">Explore Top Destination</h1>
+          </div>
+          <div class="toggle-slider">
+            <i class="bx bx-chevron-left-circle"></i>
+            <i class="bx bxs-chevron-right-circle"></i>
+          </div>
+        </div>
+        <div class="row2">
+          <div class="card-product">
+            <img src="assets/card-product-1.webp" alt="Kuta, Bali, Indonesia" />
+            <div class="detail-product">
+              <div class="category">
+                <p class="label-category">Beach</p>
+                <p class="price">$300</p>
+              </div>
+              <div class="title-card">
+                <h1>Kuta, Indonesia</h1>
+              </div>
+              <div class="review">
+                <div class="star"><i class="bx bxs-star"></i> 5.0</div>
+                <p>1.6k reviews</p>
+              </div>
+              <div class="body-card">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam
+                  pariatur error quas inventore! Maxime excepturi recusandae
+                  nesciunt impedit
+                </p>
+              </div>
+              <div class="btn-product">
+                <a href="#">Detail</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Destinantion End -->
     <script src="js/main.js"></script>
   </body>
 </html>
