--- a/index.html
+++ b/index.html
@@ -205,6 +205,58 @@
               </div>
             </div>
           </div>
+          <div class="card-product">
+            <img src="assets/card-product-1.webp" alt="Kuta, Bali, Indonesia" />
+            <div class="detail-product">
+              <div class="category">
+                <p class="label-category">Beach</p>
+                <p class="price">$300</p>
+              </div>
+              <div class="title-card">
+                <h1>Kuta, Indonesia</h1>
+              </div>
+              <div class="review">
+                <div class="star"><i class="bx bxs-star"></i> 5.0</div>
+                <p>1.6k reviews</p>
+              </div>
+              <div class="body-card">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam
+                  pariatur error quas inventore! Maxime excepturi recusandae
+                  nesciunt impedit
+                </p>
+              </div>
+              <div class="btn-product">
+                <a href="#">Detail</a>
+              </div>
+            </div>
+          </div>
+          <div class="card-product">
+            <img src="assets/card-product-1.webp" alt="Kuta, Bali, Indonesia" />
+            <div class="detail-product">
+              <div class="category">
+                <p class="label-category">Beach</p>
+                <p class="price">$300</p>
+              </div>
+              <div class="title-card">
+                <h1>Kuta, Indonesia</h1>
+              </div>
+              <div class="review">
+                <div class="star"><i class="bx bxs-star"></i> 5.0</div>
+                <p>1.6k reviews</p>
+              </div>
+              <div class="body-card">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam
+                  pariatur error quas inventore! Maxime excepturi recusandae
+                  nesciunt impedit
+                </p>
+              </div>
+              <div class="btn-product">
+                <a href="#">Detail</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
