--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
     </section>
     <!-- Service End -->
-    <!-- Destination Start -->
+    <!-- Product Start -->
     <section class="product">
       <div class="container product-wrapper">
         <div class="row1">
@@ -260,7 +260,65 @@
         </div>
       </div>
     </section>
-    <!-- Destinantion End -->
+    <!-- Product End -->
+    <!-- Footer -->
+    <footer class="footer" id="footer">
+      <div class="container footer-wrapper">
+        <div class="col-1-footer">
+          <h1 class="logo-footer">
+            Travel<span class="red">IN</span><span class="white">DO</span>
+          </h1>
+          <p class="subheading-footer">
+            The best service to customers is our top priority in building a
+            business
+          </p>
+          <div class="socmed-icon">
+            <a href="#"><i class="bx bxl-instagram-alt"></i></a>
+            <a href="#"><i class="bx bxl-whatsapp"></i></a>
+            <a href="#"><i class="bx bxl-facebook-circle"></i></a>
+          </div>
+          <p class="copy">
+            &copy Copyright 2023 All Right Reserved | Built by M Haikal Bintang
+          </p>
+        </div>
+        <div class="col-2-footer">
+          <h3>About</h3>
+          <ul>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Menu</a></li>
+          </ul>
+        </div>
+        <div class="col-3-footer">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">Why TravelINDO ?</a></li>
+            <li><a href="#">Partners with us</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Blogs</a></li>
+          </ul>
+        </div>
+        <div class="col-4-footer">
+          <h3>Support</h3>
+          <ul>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">Support Center</a></li>
+            <li><a href="#">Feedback</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Accessibility</a></li>
+          </ul>
+        </div>
+        <div class="col-5-footer">
+          <h3>Get in touch</h3>
+          <p>Question or Feedback</p>
+          <div class="form-input">
+            <input type="text" placeholder="Type your email" />
+            <a href="#" class="btn-footer">Submit</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/main.js"></script>
   </body>
 </html>
